Bug 689330 - Some debug printf's do not have newlines
Summary: Some debug printf's do not have newlines
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: master
Hardware: All All
: P4 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks: 689315
  Show dependency treegraph
 
Reported: 2007-07-04 09:54 UTC by Till Kamppeter
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
Add missing newlines (2.03 KB, patch)
2007-07-04 09:55 UTC, Till Kamppeter
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Till Kamppeter 2007-07-04 09:54:21 UTC
The debug printf calls of the file src/gdevdflt.c miss the newline in some
cases. Patch (from ESP GS) attached.
Comment 1 Till Kamppeter 2007-07-04 09:55:32 UTC
Created attachment 3156 [details]
Add missing newlines
Comment 2 Alex Cherepanov 2007-07-04 12:10:48 UTC
Commit the 1st hunk of the patch as a rev. 8100.
Other hunks are no longer applicable.