Add a newline to a debug printf. Bug 689330.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8100 a1074d23-0009-0410-80fe-cf8c14f379e6